--- a/index.html
+++ b/index.html
@@ -842,7 +842,8 @@
   <!-- Data Deletion Section -->
   <section class="data-deletion" id="data-deletion-request-form">
     <div class="container">
-      <h2 class="text-center">Data Deletion Request</h2>
+      <h2 class="">Data Deletion Request For </br> Web to app maker and converter <br></h2>
+     <p>(web.to.webtoappconverter.appmaker.appbuilder.websitebuilder.webtoapp.wesitetoapp.appcreater)</p>
       <div class="data-deletion-form">
         <p>To comply with Google Play policies, you can request deletion of your data from our apps. Please fill out the form below and we'll process your request within 30 days.</p>
         <form id="deletionForm" onsubmit="sendDeletionRequest(event)">
@@ -859,7 +860,7 @@
             <label for="appName">App Name</label>
             <select id="appName" name="appName" class="form-control" required>
               <option value="">Select an app</option>
-              <option value="web2app">Web to App Converter</option>
+              <option selected value="web2app">Web to App Converter</option>
             </select>
           </div>
           <div class="form-group">
